# elrond-ico-sc

./: .gitignore  Cargo.toml  erdpy.json
mandos/: 1-init.scen.json  2-buy.scen.json  unwrap_egld.scen.json  wrap_egld.scen.json
meta/: Cargo.toml
meta/src/: main.rs
src/: ico_manager.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
